# spike

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md  install.sh  package.json  vcs-run.js  vcs.run.json
.claude-plugin/: marketplace.json
.claude/commands/: vcs-abort.md  vcs-done.md  vcs-start.md  vcs-status.md
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml  release.yml
.vcs/: vcs.db
crates/vcs-cli/: Cargo.toml
crates/vcs-cli/src/: main.rs  mcp.rs  serve.rs  watch.rs
crates/vcs-core/: Cargo.toml
crates/vcs-core/src/: blob.rs  change.rs  error.rs  hub.rs  intent.rs  lib.rs  schema.sql  session.rs  stack.rs  store.rs  view.rs
crates/vcs-core/tests/: conflicts.rs  p0_p1.rs  parallel_agents.rs  single_agent.rs
docs/: cicd-architecture.md
examples/multi-project-demo/: .gitignore  CLAUDE.md  orchestrator.js  package.json  vcs.run.json
examples/node-demo/: package-lock.json
examples/node-demo/src/: agent-server.js  demo.js  orchestrator.js  parallel-demo.js
examples/tanstack-vite/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
examples/tanstack-vite/.vcs/: active-view.json  vcs.db
examples/tanstack-vite/e2e/: playwright.config.ts
examples/tanstack-vite/scripts/: vcs-agents.js  vcs-demo.js  vcs-init.js
examples/tanstack-vite/src/: App.css
examples/tanstack-vite/vcs-integration/: client.js  vite-plugin.js
examples/vite-overlay/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
examples/vite-overlay/plugins/: session-overlay.d.ts  session-overlay.js
examples/vite-overlay/scripts/: overlay-store.mjs  start-agents.mjs  vcs-overlay.mjs
examples/vite-overlay/src/: App.css  App.tsx  OverlayPanel.tsx  index.css
examples/webwright-demo/: .gitignore  package.json
examples/webwright-demo/.vcs/: vcs.db
examples/webwright-demo/skill/: vcs-webwright.md
examples/webwright-demo/src/: orchestrator.js  webwright-adapter.js
integrations/claude-code/: README.md
integrations/claude-code/.claude-plugin/: plugin.json
integrations/claude-code/commands/: status.md
integrations/codex/: AGENTS.md  README.md
node-demo/: package.json
node-demo/src/: vcs-client.js
skill/: SKILL.md
(+8 files in other folders)
