[workspace]
members = [
    "crates/vcs-core",
    "crates/vcs-cli",
]
resolver = "2"

[workspace.dependencies]
anyhow     = "1"
thiserror  = "1"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
blake3     = "1"
rusqlite   = { version = "0.31", features = ["bundled"] }
clap       = { version = "4", features = ["derive"] }
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid       = { version = "1", features = ["v4"] }
base64     = "0.22"
