[package]
name    = "vcs-core"
version = "0.1.0"
edition = "2021"
description = "Agent-native VCS core — change events, stacks, views, conflicts"

[dependencies]
anyhow     = { workspace = true }
thiserror  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
blake3     = { workspace = true }
rusqlite   = { workspace = true }
tracing    = { workspace = true }
uuid       = { workspace = true }

[dev-dependencies]
tempfile = "3"
